# rust-script

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
example-scripts/: time-without-main.rs
examples/: crossterm-root-no-main.rs  crossterm-root-use.rs  crossterm-root.rs  hello.rs  time-main.rs  time-root.rs  time-use.rs  time-without-main.rs
src/: bad_ideas.rs  consts.rs  error.rs  file_assoc.rs  main.rs  manifest.rs  platform.rs  templates.rs  util.rs
tests/: integration.rs
tests/tests/: script.rs
tests/util/: mod.rs
