[package]
autobins = false
autoexamples = false
default-run = "rust"
description = "run rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-script"
publish = false
rust-version = "1.59.0"
version = "0.0.0"

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
clap = "3.1.18"
dirs-next = "2.0.0"
env_logger = "0.9.0"
home = "0.5.3"
once_cell = "1.12.0"
proc-macro2 = { version = "=1.0.39", features = ["span-locations"] }
pulldown-cmark = "0.9.1"
quote = "1.0.18"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha-1 = "0.10.0"
syn = { version = "1.0.96", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
tempfile = "3.3.0"
toml = "0.5.9"
tracing = "0.1.34"

[dev-dependencies]
crossterm = "*"
scan-rules = "0.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[target.'cfg(unix)'.dependencies]
atty = "0.2.14"

[profile.release]
lto = "fat"
codegen-units = 1
